fixed the aspect ratio of the canvas on mobile devices

--- a/src/com/lushprojects/circuitjs1/public/style.css
+++ b/src/com/lushprojects/circuitjs1/public/style.css
@@ -113,9 +113,5 @@
 		width: 100% !important;
 	}
 
-	/* selects the canvas */
-	.trigger+.triggerLabel+div+div>canvas {
-		position: relative;
-		width: 100% !important;
-	}
+
 }
